# tflitec-rs

./: .gitignore  Cargo.toml  README.md  build.rs
build-res/: tflitec_with_xnnpack_BUILD.bazel
examples/llm-runner/: Cargo.toml  README.md
examples/llm-runner/src/: main.rs
src/: error.rs  interpreter.rs  lib.rs  model.rs  signature_runner.rs  tensor.rs
