[package]
name = "tflitec"
version = "0.2.0"
authors = ["ebraraktas <ebrar@voys.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tflitec"

[dependencies]

[build-dependencies]
bindgen = "0.59.1"

[features]
xnnpack = []
xnnpack_qu8 = ["xnnpack"]
xnnpack_qs8 = ["xnnpack"]

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]