[package]
name = "tflitec"
version = "0.6.0"
authors = ["ebraraktas <ebrar@voys.ai>"]
edition = "2018"
license = "MIT"
description = "A safe Rust wrapper of TensorFlow Lite C API supporting x86_64 and ARM (iOS, Android)"
repository = "https://github.com/VoysAI/tflitec-rs"
keywords = ["bindings", "tensorflow", "machine-learning", "ffi", "cross-platform"]
categories = ["api-bindings", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tflitec"

[dependencies]

[build-dependencies]
bindgen = "0.65"
fs_extra = "1.3"
curl = "0.4"

[features]
xnnpack = []
xnnpack_qu8 = ["xnnpack"]
xnnpack_qs8 = ["xnnpack"]

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
